# bn-api

./: .dockerignore  .drone.yml  .env.sample  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Cargo.docker.toml  Cargo.toml  Dockerfile  Dockerfile.drone  Makefile  README.md  buildspec.yml  init_database.sh  reset-database.sh  rustfmt.toml
api/: .env.sample  Cargo.toml  Dockerfile  log4rs.yaml
api/src/: config.rs  database.rs  lib.rs  payments.rs  routing.rs  routing_collectibles.rs  server.rs
api/src/auth/: default_token_issuer.rs  mod.rs  token_response.rs  user.rs
api/src/communications/: mod.rs
api/src/controllers/: admin.rs  analytics.rs  announcements.rs  artists.rs  auth.rs  broadcasts.rs  cart.rs  codes.rs  collection_items.rs  collections.rs  comps.rs  event_report_subscribers.rs  events.rs  genres.rs  holds.rs  ipns.rs  listings.rs  loot_boxes.rs  mod.rs  notes.rs  orders.rs  organization_invites.rs  organization_venues.rs  organizations.rs  password_resets.rs  payment_methods.rs  payments.rs  rarities.rs  redemption_codes.rs  regions.rs  reports.rs  send_download_link.rs  settlement_adjustments.rs  settlements.rs  sitemap_gen.rs  slugs.rs  stages.rs  status.rs  ticket_pricing.rs  ticket_types.rs  (+6 more)
api/src/database/: connection.rs  connection_cache.rs  connection_type.rs  database.rs  readonly_connection.rs
api/src/db/: connection.rs  connection_cache.rs  connection_redis.rs  connection_type.rs  database.rs  mod.rs  readonly_connection.rs
api/src/domain_events/: domain_action_monitor.rs  errors.rs  executor_future.rs  mod.rs  routing.rs  send_communication.rs  webhook_publisher.rs
api/src/errors/: api_error.rs  application_error.rs  auth_error.rs  big_neon_error.rs  database_error.rs  mod.rs  not_found_error.rs  web_error.rs
api/src/extractors/: access_token.rs  json.rs  mod.rs  optional_user.rs  request_info.rs  user.rs
api/src/helpers/: application.rs  caching.rs  facebook_client.rs  mod.rs
api/src/middleware/: api_logger.rs  app_version_header.rs  big_neon_logger.rs  cache_resource.rs  database_transaction.rs  metatags.rs  mod.rs
api/src/models/: add_venue_to_organization_request.rs  admin_display_ticket_type.rs  artist_spotify_or_local.rs  create_artist_request.rs  create_ticket_allocation_request.rs  display_price_point.rs  display_ticket_pricing.rs  display_ticket_type.rs  event_show_result.rs  event_venue_entry.rs  event_websocket.rs  event_websocket_message.rs  facebook_web_login_token.rs  mod.rs  paging.rs  past_or_upcoming_parameters.rs  path_parameters.rs  payload.rs  register_request.rs  request_info.rs  ticket_count_report.rs  update_artist_request.rs  user_contact_attributes.rs  user_display_ticket_type.rs  user_profile_attributes.rs
api/src/payments/: charge_auth_result.rs  charge_result.rs  mod.rs  payment_processor.rs  payment_processor_error.rs  repeat_charge_token.rs  update_metadata_result.rs
api/src/tari/: mod.rs  tari_messages.rs  tariclient.rs
api/src/utils/: cloudinary.rs  communication.rs  deep_linker.rs  expo.rs  firebase.rs  gen_sitemap.rs  google_recaptcha.rs  logging.rs  marketing_contacts.rs  marketplace_api.rs  mod.rs  sendgrid.rs  serializers.rs  service_locator.rs  sharetribe_marketplace_api.rs  spotify.rs  twilio.rs  webhook.rs
api/tests/: mod.rs  tests.rs
api/tests/functional/: announcements.rs  artists.rs  auth.rs  broadcast.rs  cart.rs  codes.rs  collection_items.rs  collections.rs  comps.rs  event_report_subscribers.rs  events.rs  facebook.rs  genres.rs  holds.rs  mod.rs  notes.rs  orders.rs  organization_invites.rs  organization_venues.rs  organizations.rs  password_resets.rs  payment_methods.rs  redemption_codes.rs  regions.rs  reports.rs  reports_admin.rs  settlement_adjustments.rs  settlements.rs  sitemap.rs  slugs.rs  stages.rs  ticket_types.rs  tickets.rs  transfers.rs  user_invites.rs  users.rs  venues.rs
api/tests/support/: database.rs  mod.rs  test_request.rs
api/tests/unit/: mod.rs
customer_io/: Cargo.toml
customer_io/src/: lib.rs
db/: .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs
db/benches/: carts.rs  main.rs  users.rs
db/functions/: event_fees_per_event.sql  functions.sql  order_items_ticket_type_id_valid_for_access_code.sql  process_settlement_for_event.sql  redemption_code_unique_per_event.sql  report_ticket_sales_by_organization.sql  ticket_count_per_ticket_type.sql  ticket_sales_per_ticket_pricing.sql
db/migrations/00000000000000_diesel_initial_setup/: up.sql
db/migrations/00000000000002_users/: down.sql  up.sql
db/migrations/00000000000003_organizations/: down.sql  up.sql
db/migrations/00000000000004_organization_users/: down.sql  up.sql
db/migrations/00000000000005_regions/: down.sql  up.sql
db/migrations/00000000000005_venues/: up.sql
db/migrations/00000000000006_organization_venues/: down.sql
db/migrations/00000000000006_venues/: down.sql  up.sql
db/migrations/00000000000007_artists/: down.sql  up.sql
db/migrations/00000000000008_events/: down.sql  up.sql
db/migrations/00000000000008_organization_venues/: up.sql
db/migrations/00000000000009_event_artists/: down.sql  up.sql
db/migrations/00000000000009_events/: up.sql
db/migrations/00000000000010_event_artists/: up.sql
db/migrations/00000000000010_orders/: down.sql  up.sql
db/migrations/00000000000011_event_histories/: down.sql  up.sql
db/migrations/00000000000012_organization_invites/: down.sql  up.sql
db/migrations/00000000000013_external_logins/: down.sql  up.sql
db/migrations/00000000000014_event_interest/: down.sql  up.sql
db/scripts/: code_coverage.sh  init-reset.sh  init-test.sh  init.sh  pre-commit.sh
db/src/: bin.rs  lib.rs  schema.rs
db/tests/: mod.rs  setup.rs  tests.rs
globee/: Cargo.toml
globee/src/: lib.rs
http/caching_derive/: Cargo.toml
sharetribe_flex/: Cargo.toml
sharetribe_flex/src/: error.rs  lib.rs  response.rs  result.rs  util.rs
tari-client/: Cargo.toml
tari-client/src/: cryptographic.rs  lib.rs  tari_client.rs  tari_error.rs  tari_messages.rs  tari_test_client.rs
(+1240 files in other folders)
