[workspace]

members = [
    "api",
    "branch_rs",
    "db",
    "globee",
    "http",
    "tari-client",
    "stripe",
    "logging",
    "macros"
]

[patch.crates-io]
diesel_derives = {git="https://github.com/mikethetike/diesel", branch="r2d2-transaction-check"}
diesel = {git="https://github.com/mikethetike/diesel", branch="r2d2-transaction-check"}