[package]
name = "bigneon_api"
version = "1.0.10"
authors = ["CjS77"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-api/"
description = "Big Neon unified API server"
documentation = "https://github.com/big-neon/docs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
bigneon_db = { path = "../db" }
bigneon_http = { path = "../http" }
bigneon_caching_derive = { path = "../http/caching_derive" }
branch_rs = {path="../branch_rs"}
chrono = {version = "0.4", features = ["serde"]}
clap = "2.32"
diesel = {version = "1.3", features = ["r2d2"]}
dotenv = "0.13"
futures = "0.1"
globee={path="../globee"}
itertools = "0.7"
jsonwebtoken = "5"
lettre = "0.8"
lettre_email = "0.8"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["max_level_debug"]}
logging = {path="../logging"}
macros = {path="../macros"}
r2d2 = "0.8"
regex = "1"
reqwest="0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "0.2"
stripe = {path="../stripe"}
tari-client= {path="../tari-client"}
tokio = "0.1"
# TODO move this to the bigneon org? Currently just testing this lib, so if we
# are still using it in a few months, fork it into /bigneon
twilio= { git = "https://github.com/mikethetike/twilio-rs" , rev="f9e6d4bb3d6549101a0f3d6923b60ca6bfd8a89b"}
uuid = { version = "0.6", features = ["serde", "v4"] }
url="1.7.2"
validator = "0.8"
validator_derive = "0.8"
