[package]
name = "bigneon_api"
version = "1.8.7"
authors = ["CjS77"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-api/"
description = "Big Neon unified API server"
documentation = "https://github.com/big-neon/docs"

[dependencies]
actix = "0.7"
actix-web = "=0.7.18"
bigneon_db = { path = "../db" }
bigneon_http = { path = "../http" }
bigneon_caching_derive = { path = "../http/caching_derive" }
branch_rs = {path="../branch_rs"}
chrono = {version = "0.4", features = ["serde"]}
clap = "2.32"
customer_io= {path="../customer_io"}
diesel="1.4.2"
dotenv = "0.13"
# Pulling from github as dependency fix merged into master has yet to be released
expo-server-sdk = { git = "https://github.com/expo/expo-server-sdk-rust", rev="a4334d2d7243ac5e0ecb77478bb42774bbd9af54" }
facebook = { path="../facebook"}
futures = "0.1"
globee={path="../globee"}
itertools = "0.7"
jsonwebtoken = "5"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["max_level_debug"]}
logging = {path="../logging"}
macros = {path="../macros"}
phonenumber = "0.2.3"
r2d2 = "0.8"
regex = "1"
reqwest="0.9.22"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "0.2"
stripe = {path="../stripe"}
tari-client= {path="../tari-client"}
tokio = "0.1"
# TODO move this to the bigneon org? Currently just testing this lib, so if we
# are still using it in a few months, fork it into /bigneon
twilio= { git = "https://github.com/mikethetike/twilio-rs", rev="8a746caed756c3cfe57e082084fda8be3170721a"}
uuid = { version = "0.6", features = ["serde", "v4"] }
url="1.7.2"
validator = "0.8"
validator_derive = "0.8"
sitemap = "0.4"
