[package]
name = "api"
version = "1.9.50"
authors = ["CjS77"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-api/"
description = "Big Neon unified API server"
documentation = "https://github.com/big-neon/docs"
edition = "2018"

[dependencies]
actix-rt = "1.0"
actix = "0.9"
actix-web = "2.0"
actix-cors = "0.2"
actix-web-actors = "2.0"
actix-service = "1.0"
actix-files = "0.2"
actix-http = "1.0.1"
db = { path = "../db", package ="bigneon_db" }
http = { path = "../http", package="bigneon_http" }
caching_derive = { path = "../http/caching_derive", package="bigneon_caching_derive" }
branch_rs = {path="../branch_rs"}
bytes = "0.5"
chrono = {version = "0.4", features = ["serde"]}
clap = "2.32"
customer_io= {path="../customer_io"}
cache= {path="../cache"}
diesel="1.4.2"
dotenv = "0.13"
# Pulling from github as dependency fix merged into master has yet to be released
expo-server-sdk = { git = "https://github.com/expo/expo-server-sdk-rust", rev="a4334d2d7243ac5e0ecb77478bb42774bbd9af54" }
facebook = { version = "0.2.0", path = "../facebook"}
futures = "0.3"
globee = { version = "0.2.0", path = "../globee" }
itertools = "0.7"
jsonwebtoken = "5"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["max_level_debug"]}
logging = {path="../logging"}
macros = {path="../macros"}
phonenumber = "0.2.3"
r2d2 = "0.8"
redis = "0.13"
regex = "1"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "0.2"
stripe = { version = "0.2.0", path = "../stripe" }
tari-client= {path="../tari-client"}
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "time"] }
# TODO move this to the bigneon org? Currently just testing this lib, so if we
# are still using it in a few months, fork it into /bigneon
twilio= { git = "https://github.com/mikethetike/twilio-rs", rev="8a746caed756c3cfe57e082084fda8be3170721a"}
uuid = { version = "0.6", features = ["serde", "v4"] }
url="1.7.2"
validator = "0.8"
validator_derive = "0.8"
sitemap = "0.4"
async-trait = "0.1"
