[package]
name = "customer_io"
version = "0.1.0"
authors = ["toiletspider <dan4rie@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
reqwest = "0.9.22"
url = "2.1.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive-error="0.0.4"
logging={path="../logging"}
log = "0.4"