[package]
name = "bigneon_db"
version = "0.1.0"
authors = ["CjS77","mikethetike"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-db/"
description = "Big Neon database bindings and facade layer"
documentation = "https://github.com/big-neon/docs"

[lib]
name="bigneon_db"
path="src/lib.rs"

[[bin]]
name="bndb_cli"
path="src/bin.rs"

[dependencies]
diesel = { version = "1.3.2", features = ["postgres", "uuid", "chrono"] }
dotenv = "0.13.0"
rand = "0.5.4"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
chrono = { version = "0.4.5", features = ["serde"] }
argon2rs = "0.2.5"
log = "0.4"
log4rs = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap="2.32.0"
diesel_migrations="1.3.0"

[dev-dependencies]
fake = { version = "1.2.2" }
url = "1.7.1"
rand = "0.5"

[[test]]
name = "tests"
