[package]
name = "bigneon_db"
version = "0.1.112"
authors = ["CjS77","mikethetike"]
license = "BSD-3"
repository = "https://github.com/big-neon/bn-db/"
description = "Big Neon database bindings and facade layer"
documentation = "https://github.com/big-neon/docs"
autobins = false

[lib]
name="bigneon_db"
path="src/lib.rs"

[[bin]]
name="bndb_cli"
path="src/bin.rs"

[[bench]]
name="main"
harness=false

[dependencies]
backtrace = "0.2"
diesel = { version = "1.3", features = ["postgres", "uuid", "chrono","numeric", "serde_json"] }
dotenv = "0.13"
hex = "0.3.2"
rand = "0.5"
uuid = { version = "0.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.4"
argon2rs = "0.2"
itertools = "0.7"
log = "0.4"
logging = {path="../logging"}
ring = "0.13.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "0.2"
clap="2.32"
diesel_migrations="1.3"
validator = "0.8"
validator_derive = "0.8"
time="0.1"
tari-client= {path="../tari-client"}


[dev-dependencies]
fake = { version = "1.2" }
url = "1.7.1"
criterion = "*"