[package]
name = "globee"
version = "0.2.0"
authors = ["Mike Berry <mikethetike@tari.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url= "1.7.2"
derive-error="0.0.4"
logging={path="../logging"}
log = "0.4"
chrono = {version="0.4.6",features = ["serde"]}
