[package]
name = "sharetribe_flex"
version = "0.1.0"
authors = ["Mike Berry <mikethetike@tari.com>"]
edition = "2018"


[dependencies]
snafu = "0.6.2"
chrono = {version="0.4.10", features=["serde"]}
serde = "1.0.104"
serde_json = "1.0.48"
reqwest = "0.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
serde_urlencoded="0.6.1"